--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     </properties>
 
     <modules>
-        <module>stats-server</module>
+        <module>stats-service</module>
         <module>ewm-service</module>
     </modules>
 
