--- a/ewm-service/pom.xml
+++ b/ewm-service/pom.xml
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>ru.practicum</groupId>
             <artifactId>client</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
