--- a/stats-service/stats-server/pom.xml
+++ b/stats-service/stats-server/pom.xml
@@ -18,11 +18,10 @@
     </properties>
 
     <dependencies>
-
         <dependency>
             <groupId>ru.practicum</groupId>
             <artifactId>client</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
