--- a/ewm-service/src/main/resources/application.properties
+++ b/ewm-service/src/main/resources/application.properties
@@ -1,5 +1,27 @@
+server.port=8080
+stats-server.url=http://localhost:9090
 spring.sql.init.mode=always
 logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=TRACE
-#stats-server.url=${STATS_SERVER_URL}
-#stats-server.url=http://stats-server:9090
+#---
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/postgres}
+spring.datasource.username=${POSTGRES_USER:postgres}
+spring.datasource.password=${POSTGRES_PASSWORD:postgres}
+#---
+spring.config.activate.on-profile=ci,test
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:ewm
+spring.datasource.username=test
+spring.datasource.password=test
+
+#spring.datasource.driverClassName=org.postgresql.Driver
+##spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/ewmBD}
+#spring.datasource.url=${SPRING_DATASOURCE_URL}
+#spring.datasource.username=${POSTGRES_USER:postgres}
+#spring.datasource.password=${POSTGRES_PASSWORD:postgres}
+
+#spring.datasource.driverClassName=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
